# foglamp-filter-python27

./: CMakeLists.txt  Description  Package  README.rst  make_deb  plugin.cpp  python27_filter.cpp  readings27.py
include/: python27.h
